# trlc-dk1

./: .gitignore  README.md  pyproject.toml
examples/: calibrate_gripper.py  calibration_follower.py  follower_read_position.py  teleop.py
lerobot_robot_trlc_dk1/: __init__.py  bi_follower.py  follower.py  leader.py
lerobot_robot_trlc_dk1/motors/DM_Control_Python/: DM_CAN.py
src/trlc_dk1/: follower.py  leader.py
trlc_dk1_control/: __init__.py  config.py  gravity_comp.py  motor_chain.py  robot.py
urdf/follower/: TRLC-DK1-Follower.urdf
