[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lerobot_robot_trlc_dk1"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0.1",
  "pyserial>=3.5",
  "dynamixel-sdk>=3.7.31",
  "lerobot[dynamixel,viz]@git+https://github.com/mQualia/lerobot.git@f27917d3100654c657533160f5f83c082ff63dc7",
  "mujoco>=3.0.0",
]

authors = [
  {name = "Jannik Grothusen", email = "jannik@robot-learning.co"},
]
maintainers = [
  {name = "Jannik Grothusen", email = "jannik@robot-learning.co"},
]

[project.urls]
Homepage = "https://www.robot-learning.co/"
Documentation = "https://www.docs.robot-learning.co/"

[tool.hatch.metadata]
allow-direct-references = true